--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
         
         <div id="game-menu">
-            <h1 id="game-title">NEO FPS</h1>
+            <h1 id="game-title">play.bandhanpokhrel.com.np</h1>
             <button class="menu-button" id="start-button">START GAME</button>
             <button class="menu-button" id="controls-button">CONTROLS</button>
         </div>
@@ -223,7 +223,7 @@
         let canJump = true;
         let velocity = new THREE.Vector3();
         let direction = new THREE.Vector3();
-        const moveSpeed = 0.2;
+        const moveSpeed = 0.4;
         const jumpHeight = 0.5;
         
         // DOM elements
